@@ -1,5 +1,5 @@
 #!/bin/sh
-# $Id: testminiwget.sh,v 1.6 2012/05/29 13:03:40 nanard Exp $
+# $Id: testminiwget.sh,v 1.9 2013/04/27 15:47:27 nanard Exp $
 # project miniupnp : http://miniupnp.free.fr/
 # (c) 2011-2012 Thomas Bernard
 #
@@ -15,10 +15,10 @@
 # The script was tested and works with ksh, bash
 # It fails to run with dash 0.5.5.1 because of "kill %1"
 
-TMPDIR=`mktemp -d`
-HTTPSERVEROUT="${TMPDIR}/httpserverout"
-EXPECTEDFILE="${TMPDIR}/expectedfile"
-DOWNLOADEDFILE="${TMPDIR}/downloadedfile"
+TMPD=`mktemp -d miniwgetXXXXXXXXXX`
+HTTPSERVEROUT="${TMPD}/httpserverout"
+EXPECTEDFILE="${TMPD}/expectedfile"
+DOWNLOADEDFILE="${TMPD}/downloadedfile"
 PORT=
 RET=0
 
@@ -87,10 +87,10 @@ if [ $RET -eq 0 ]; then
 	rm -f "${DOWNLOADEDFILE}.2"
 	rm -f "${DOWNLOADEDFILE}.3"
 	rm -f $EXPECTEDFILE $HTTPSERVEROUT
-	rmdir ${TMPDIR}
+	rmdir ${TMPD}
 else
 	echo "at least one of the test FAILED"
-	echo "directory ${TMPDIR} is left intact"
+	echo "directory ${TMPD} is left intact"
 fi
 exit $RET
 
